# toplex

./: CMakeLists.txt  README.md  input..txt  main.cpp
include/: FiniteAutomata.hpp  InputManager.hpp  State.hpp
src/: CMakeLists.txt  FiniteAutomata.cpp  InputManager.cpp  State.cpp  main.cpp
test/: InputManager_getsInitiatedCorrectly.cpp
